[package]
name = "raigeki"
version = "0.1.0"
edition = "2021"

[dependencies]
raigeki-error = { version = "0.2.0", path = "../raigeki-error" }
raigeki-tools = { version = "0.1.0", path = "../raigeki-tools" }
async-trait = "0.1.83"
jemallocator = "0.5.4"
log = "0.4.22"
maxminddb = "0.24.0"
once_cell = "1.20.2"
pingora = "0.6.0"
prometheus = "0.13.4"
serde = "1.0.215"
tokio = "1.42.0"
env_logger = "0.11.5"
pingora-limits = "0.4.0"
sysinfo = "0.33.0"
memcache = "0.18.0"
num_cpus = "1.16.0"
dotenvy = "0.15.7"
